--- a/src/main/resources/templates/ManagerBill.html
+++ b/src/main/resources/templates/ManagerBill.html
@@ -81,11 +81,11 @@
       <div class="hint-text">Showing <b th:text="${pageSize}"></b> out of <b th:text="${totalItems}"></b> entries</div>
       <ul class="pagination" th:if="${totalPages > 1}">
 
-        <li class="page-item " th:class="${currentPage == 1} ? 'disabled' : ''"><a th:if="${currentPage <= totalPages}" th:href="@{'manage-bill/' + ${currentPage - 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Previous</a></li>
-        <li class="page-item"><a class="page-link" tabindex="-1" aria-disabled="true" th:href="@{'manage-bill/1' + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">First</a></li>
+        <li class="page-item " th:class="${currentPage == 1} ? 'disabled' : ''"><a th:if="${currentPage <= totalPages}" th:href="@{'/manage-bill/' + ${currentPage - 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Previous</a></li>
+        <li class="page-item"><a class="page-link" tabindex="-1" aria-disabled="true" th:href="@{'/manage-bill/1' + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">First</a></li>
         <th:block th:each="i: ${#numbers.sequence(1, totalPages)}">
           <li class="page-item active" aria-current="page" th:class="${currentPage == i} ? 'page-item active': 'page-item'" >
-            <a class="page-link" th:href="@{'manage-bill/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}" >[[${i}]]</a>
+            <a class="page-link" th:href="@{'/manage-bill/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}" >[[${i}]]</a>
           </li>
         </th:block>
         <li class="page-item">
