--- a/src/main/resources/templates/ManagerProduct.html
+++ b/src/main/resources/templates/ManagerProduct.html
@@ -77,7 +77,7 @@
                 <td th:text="${phone.id}" ></td>
                 <td th:text="${phone.name}" ></td>
                 <td>
-                    <img th:src="${phone.image}">
+                    <img th:src="${phone.imagePath}">
                 </td>
                 <td th:text="${phone.price}" ></td>
                 <td th:text="${phone.oldPrice}" ></td>
@@ -117,6 +117,9 @@
 </div>
 <script th:src="@{/js/manager.js}" type="text/javascript"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script type="text/javascript">
+
+</script>
 </body>
 
 
