--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -207,10 +207,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="banner-right">
 			<ul id="flexiselDemo2" >
 				<li th:each="featuredProduct: ${featuredPhones}">
-					<div class="banner-grid">
+					<div class="banner-grid" style="min-height: 600px" >
 						<h2>Featured Phone</h2>
 						<div class="wome">
-							<a th:href="@{'/all-phone/' + ${featuredProduct.getId()}}"><img class="img-responsive" th:src="${featuredProduct.image}" alt="" />
+							<a th:href="@{'/all-phone/' + ${featuredProduct.getId()}}"><img class="img-responsive"style="min-height: 300px"  th:src="${featuredProduct.imagePath}" alt="" />
 							</a>
 							<div class="women simpleCart_shelfItem">
 								<a href="#"><img src="images/ll.png" alt=""></a>
@@ -314,7 +314,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="col-md-7 animated wow fadeInRight" data-wow-delay=".1s">
 			<h1 style="text-align: center;  margin:25px 0px">Most Quantity Phone</h1>
 			<div class="col-sm-4 item-grid simpleCart_shelfItem phone-item" th:each="mostQuantityPhone: ${mostQuantityPhones}">
-				<div class="grid-pro">
+				<div class="grid-pro" style="min-height: 480px">
 
 					<div class=" grid-product ">
 
@@ -322,10 +322,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 								<a th:href="@{'all-phone/' + ${mostQuantityPhone.getId()}}">
 									<div class="grid-img">
-										<img th:src="${mostQuantityPhone.image}" class="img-responsive" alt="" style="height: 100%">
+										<img th:src="${mostQuantityPhone.imagePath}" class="img-responsive" alt="">
 									</div>
 									<div class="grid-img">
-										<img th:src="${mostQuantityPhone.image}" class="img-responsive" alt="">
+										<img th:src="${mostQuantityPhone.imagePath}" class="img-responsive" alt="">
 									</div>
 								</a>
 							</figure>
@@ -353,15 +353,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="col-md-7 animated wow fadeInLeft" data-wow-delay=".1s">
 			<h1 style="text-align: center; margin:25px 0px">Newest Phone</h1>
 			<div class="col-sm-4 item-grid simpleCart_shelfItem phone-item" th:each="newestPhone: ${newestPhones}">
-				<div class="grid-pro">
+				<div class="grid-pro" style="min-height: 480px">
 					<div class=" grid-product ">
 						<figure>
 							<a th:href="@{'all-phone/' + ${newestPhone.getId()}}">
 								<div class="grid-img">
-									<img th:src="${newestPhone.image}" class="img-responsive" alt="">
+									<img th:src="${newestPhone.imagePath}" class="img-responsive" alt="">
 								</div>
 								<div class="grid-img">
-									<img th:src="${newestPhone.image}" class="img-responsive" alt="">
+									<img th:src="${newestPhone.imagePath}" class="img-responsive" alt="">
 								</div>
 							</a>
 						</figure>
