--- a/src/main/resources/templates/Add.html
+++ b/src/main/resources/templates/Add.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <link th:href="@{/css/manager.css}" rel="stylesheet" type="text/css"/>
     <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css">
 
@@ -45,7 +46,7 @@
     <div id="editEmployeeModal">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form th:action="@{/save-phone}" method="post" th:object="${phone}" id="addForm">
+                <form th:action="@{/save-phone}" method="post" th:object="${phone}" id="addForm" enctype="multipart/form-data">
                     <div class="modal-header">
                         <h4 class="modal-title">Add Product</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><a href="/manage-phone/1?sortField=id&sortDir=asc">&times;</a></button>
@@ -57,8 +58,10 @@
                         </div>
                         <div class="form-group">
                             <label>Image</label>
-                            <input  name="image" type="text" class="form-control">
+                            <input  name="fileImage" type="file" id="fileImage" class="form-control " accept="image/png, image/jpeg ">
+                            <img id="thumbnail" alt="Logo preview" src="" style="object-fit: cover;height: 300px;width: 400px">
                         </div>
+
                         <div class="form-group">
                             <label>Price</label>
                             <input  name="price" type="number" class="form-control">
@@ -135,5 +138,21 @@
 
 
 <script th:src="@{/js/manager.js}" type="text/javascript"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#fileImage').change(function () {
+            showImageThumbnail(this);
+        })
+    })
+    
+    function showImageThumbnail(fileInput) {
+        file = fileInput.files[0]
+        reader = new FileReader();
+        reader.onload = function (e) {
+            $('#thumbnail').attr('src', e.target.result)
+        };
+        reader.readAsDataURL(file);
+    }
+</script>
 </body>
 </html>
