--- a/src/main/resources/templates/myAccount.html
+++ b/src/main/resources/templates/myAccount.html
@@ -113,7 +113,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       </div>
       <div style="margin-top: 50px">
 
-        <a href="" class="btn btn-info" style="padding: 10px 0;font-size: 20px;">Transaction history</a>
+        <a href="/user/transaction-history" class="btn btn-info" style="padding: 10px 0;font-size: 20px;">Transaction history</a>
         <a href="/user/change-password" class="btn btn-warning" style="padding: 10px 0;font-size: 20px;">Change Password</a>
       </div>
 
